2002-05-26  Sam Steingold  <sds@gnu.org>

	timeout on connecting, see <http://cr.yp.to/docs/connect.html>
	* socket.d (socket_connect_fn_t): accept 3rd arg `opts' (renamed
	from `socket_connect_fn')
	(with_hostname): accept 4th arg `opts' (passed to `connector')
	(connect_to_x_via_ip, bindlisten_via_ip): accept and ignore `opts'
	(connect_to_x_server, create_server_socket): pass NULL to
	`with_hostname' as `opts'
	(create_client_socket, connect_via_ip): accept 3rd `timeout' arg
	* stream.d (sec_usec): sec may also be a cons and a real
	(socket_server_wait): extracted from SOCKET-WAIT
	(SOCKET-ACCEPT, SOCKET-CONNECT): accept 4th keyword arg :TIMEOUT
	(SOCKET-WAIT): use socket_server_wait()
	* subr.d, subrkwd.d (socket_accept, socket_connect): updated
	* constsym.d (TIMEOUT): added the keyword

2002-05-25  Arseny Slobodjuck <ampy@ich.dvo.ru>

	fixed win32 build (broken on 2002-05-23 and 2002-05-22)
	* array.d (elt_move_Char): rename the label right after
	block beginning from `restart' to `restart_it' since 'restart'
	is used before as a type name and it confuses the compiler
	* charstrg.d (sstring_store_array): `small' renamed to `smallp'
	for a similar reason
	(coerce_normal_ss, nstring_upcase, nstring_downcase): `restart'
	renamed to `restart_it'
	* win32aux.d (read_helper_low, sock_read): fixed typos

2002-05-24  Sam Steingold  <sds@gnu.org>

	* linux.lisp (read-helper): new function (points to read_helper)
	(read): a macro, calls read-helper

2002-05-23  Sam Steingold  <sds@gnu.org>

	buffered sockets and pipes now work
	* acorn.d (read_helper): prototype
	(full_read, safe_read): #define
	* amiga.d, msdos.d, win32.d: ditto
	* amigaaux.d (read_helper): implemented
	(full_read): removed
	* unixaux.d: ditto
	(sock_read) [UNIX_BEOS]: partial read is okay
	* win32aux.d (lowlevel_full_read, do_full_read, full_read): removed
	(read_helper_low, do_read_helper, read_helper): added
	(lowlevel_sock_read): partial read is okay